fixing layout bug on mobile, switching layout of cards.

--- a/src/main/svelte/src/app.css
+++ b/src/main/svelte/src/app.css
@@ -3,11 +3,11 @@
 @import 'tailwindcss/utilities';
 
 h1 {
-    @apply text-neutral-100 font-black text-4xl;
+    @apply text-neutral-100 font-black text-3xl xl:text-4xl;
 }
 
 h2 {
-    @apply text-neutral-100 font-black text-3xl;
+    @apply text-neutral-100 font-black text-2xl xl:text-3xl;
 }
 
 p.subtitle {
